kubernetes-cluster/manifests/apps/gitea/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: tools
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea
        image: gitea/gitea:1.21.5
        ports:
        - containerPort: 3000
        - containerPort: 2222
        volumeMounts:
        - mountPath: '/etc/timezone'
          name: storage-volume
          subPath: 'gitea/etc/timezone'
        - mountPath: '/etc/localtime'
          name: storage-volume
          subPath: 'gitea/etc/localtime'
        - mountPath: '/data'
          name: storage-volume
          subPath: 'gitea/data'
      volumes:
      - name: storage-volume
        persistentVolumeClaim:
          claimName: tools-pvc
