kubernetes-cluster/manifests/apps/gitea/service-ssh.yml
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: tools
spec:
  selector:
    app: gitea
  ports:
  - name: gitea
    port: 22
    targetPort: 22
  type: LoadBalancer
  externalIPs:
  - 192.168.68.10
