kubernetes-cluster/manifests/apps/gitea/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: tools
spec:
  selector:
    app: gitea
  ports:
  - name: gitea
    protocol: TCP
    port: 80
    targetPort: 3000
